--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="#">Course Management System </a><span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">A web based project where students can view their course details, short note and book references of each course. Teacher / Authority can access the admin panel to modify any changes. <br> Language Used: PHP, JavaScript, JQuery, AJAX and MySQL. </p>
-                                <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
+                                <p><a class="more-link" href="https://github.com/raihanruhin/Course-Management-System" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#">Hospital Management System</a> </h3>
