Multi Agent Pacman added

--- a/index.html
+++ b/index.html
@@ -59,11 +59,18 @@
                         <h2 class="heading">Projects</h2>
                         <div class="content">
                             <div class="item">
+                                <h3 class="title"><a href="#"> Multi-Agent Pacman </a><span class="label label-theme">Open Source</span></h3>
+                                <p class="summary">This is an Artificial Inteligence Project. In this project, I have designed agents for the classic version of Pacman, including ghosts. <br>
+                                Algorithms used: Minimax Search, Alpha-Beta Pruning, Expectimax Search <br>
+                                Language  </p>
+                                <p><a class="more-link" href="https://github.com/raihanruhin/Multi-Agent_Pacman" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title"><a href="#">SEARCH-IN-PACMAN </a><span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, Pacman agent finds paths through his maze world, both to reach a particular location and to collect food efficiently. I have build general search algorithms and apply them to Pacman scenarios. <br>
                                  Algorithms Used: Depth First Search, Breadth First Search, Uniform Cost Search, A* search <br>
                                  Conditions Handled: Finding All the Corners, Corners Heuristic, Eating All The Dots, Suboptimal Search <br>
-                                 Language Used: Python 2.7 </p>
+                                 Language Used: Python 2 </p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/SEARCH-IN-PACMAN" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
