project android app CS Fresher Interview Q&A added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
                     <div class="section-inner">
                         <h2 class="heading">Projects</h2>
                         <div class="content">
+                         <div class="item">
+                                <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
+                                <p class="summary">This Android app is specially designed for fresh computer science graduates with no job experience. The app contain most commonly asked interview questions as well as answers.  <br>
+                                Technology used: Android Studio, Fragment, RESTful api, Json, Volley, AsyncTask, Recycler View,  <br>
+                                Language Used: Java, MySql</p>
+                                <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
+                            </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#"> Multi-Agent Pacman </a><span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, I have designed agents for the classic version of Pacman, including ghosts. <br>
