--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div><!--//item-->
                             
                             <div class="item">
-                                <h3 class="title">Trainee Software Engineer, Department of Android Development Lab - <span class="place"><a href="#">eLogical IT Experts Limited</a></span> <span class="year">(January 2015 - April 2015)</span></h3>
+                                <h3 class="title">Trainee Software Engineer, Department of Android Development Lab - <span class="place"><a href="http://elitesbd.com/">eLogical IT Experts Limited</a></span> <span class="year">(January 2015 - April 2015)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Design and build advanced applications for the Android platform</li>
