--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="content">
                          <div class="item">
                                 <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
-                                <p class="summary">This Android app is specially designed for fresh computer science graduates with no job experience. The app contain most commonly asked interview questions as well as answers.  <br>
+                                <p class="summary">This Android app is specially designed for fresh computer science graduates with no prior experience. It contains most commonly asked interview questions as well as answers.  <br>
                                 Technology used: Android Studio, Fragment, RESTful api, Json, Volley, AsyncTask, Recycler View,  <br>
                                 Language Used: Java, MySql</p>
                                 <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
