CricQuiz BD added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,14 @@
                     <div class="section-inner">
                         <h2 class="heading">Projects</h2>
                         <div class="content">
-                         <div class="item">
+                            <div class="item">
+                                <h3 class="title"><a href="#"> Cric Quiz BD </a></h3>
+                                <p class="summary">CricQuiz BD is a gaming app by which you can Earn Money. By playing CricQuizBD you can convert your scores to credit recharge on your mobile. It's a fun game to practice the cricket knowledge on your android phones.  <br>
+                                Technology used: Android Studio  <br>
+                                Language Used: Java, MySQL</p>
+                                <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
                                 <p class="summary">This Android app is specially designed for fresh computer science graduates with no prior experience. It contains most commonly asked interview questions as well as answers.  <br>
                                 Technology used: Android Studio, Fragment, RESTful api, Json, Volley, AsyncTask, Recycler View,  <br>
