--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <p class="summary">CricQuiz BD is a gaming app by which you can Earn Money. By playing CricQuizBD you can convert your scores to credit recharge on your mobile. It's a fun game to practice the cricket knowledge on your android phones.  <br>
                                 Technology used: Android Studio  <br>
                                 Language Used: Java, MySQL</p>
-                                <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
+                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=multiplexer.cric.quiz&hl=en" target="_blank"> Download From Google Play </a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
