--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                             </div><!--//item-->
                             
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-book"></i> <a href="https://www.edx.org/course/introduction-cloud-computing-ieeex-cloudintro-x-1"> Introduction to Cloud Computing </a> ( 4 weeks ) </h3>
+                                <h3 class="title"><i class="fa fa-book"></i> <a href="https://www.edx.org/course/introduction-cloud-computing-ieeex-cloudintro-x-1"> Cloud Computing </a> ( 4 weeks ) </h3>
                                 <h4 class="university"> <a href="https://www.ieee.org/index.html/"> IEEE </a> <span class="year"> via <a href="https://www.edx.org/"> Edx </a></span></h4>
                             </div><!--//item-->
                         
