--- a/index.html
+++ b/index.html
@@ -338,10 +338,9 @@
                     <div class="section-inner">
                         <h2 class="heading">Publications</h2> 
                         <div class="content">
-                            <ul>
-                                <li><a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> <small>Published Date: February 15, 2016 <br>
-                                Journal of Computer and Communications, Vol 4, No 2.</small></li>
-                            </ul>
+                            <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> <small>Published Date: February 15, 2016 <br>
+                                Journal of Computer and Communications, Vol 4, No 2.</small>
+                            
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
