--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <h2 class="heading">Publications</h2> 
                         <div class="content">
                             <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> <small>Published Date: February 15, 2016 <br>
-                                Journal of Computer and Communications, Vol 4, No 2.</small>
+                                Journal of Computer and Communications, <br>(Vol 4, No 2.)</small>
                             
                         </div><!--//content-->
                     </div><!--//section-inner-->
