--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
                     <div class="section-inner">
                         <h2 class="heading">Publications</h2> 
                         <div class="content">
-                            <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> Published Date: February 15, 2016 <br>
-                                Journal of Computer and Communications, <br>(Vol 4, No 2.)
+                            Title: <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> Published Date: February 15, 2016 <br>
+                                Journal of Computer and Communications, (Vol 4, No 2.)
                             
                         </div><!--//content-->
                     </div><!--//section-inner-->
