--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
                                 <p class="summary">This Android app is specially designed for fresh computer science graduates with no prior experience. It contains most commonly asked interview questions as well as answers.  <br>
-                                Technology used: Android Studio, Fragment, RESTful api, Json, Volley, AsyncTask, Recycler View,  <br>
+                                Technology used: Android Studio, Fragment, RESTful api, JSON, AsyncTask, Recycler View,  <br>
                                 Language Used: Java, MySQL, PHP</p>
                                 <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
                             </div><!--//item-->
@@ -83,13 +83,13 @@
                                 <h3 class="title"><a href="#">Search in Pacman </a><span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, Pacman agent finds paths through his maze world, both to reach a particular location and to collect food efficiently. I have build general search algorithms and apply them to Pacman scenarios. <br>
                                  Algorithms Used: Depth First Search, Breadth First Search, Uniform Cost Search, A* search <br>
-                                 Conditions Handled: Finding All the Corners, Corners Heuristic, Eating All The Dots, Suboptimal Search <br>
+                                 Conditions Handled: Finding All Corners, Corners Heuristic, Eating All Dots, Suboptimal Search <br>
                                  Language Used: Python</p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/SEARCH-IN-PACMAN" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#">Course Management System </a><span class="label label-theme">Open Source</span></h3>
-                                <p class="summary">A web based project where students can view their course details, short note and book references of each course. Teacher / Authority can access the admin panel to modify any changes. <br> Language Used: PHP, JavaScript, JQuery, AJAX and MySQL. </p>
+                                <p class="summary">A web based project where students can view their course details, short note and book references of each course. Teacher can access the admin panel to modify any changes. <br> Language Used: PHP, JavaScript, JQuery, AJAX and MySQL. </p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/Course-Management-System" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             
@@ -148,7 +148,7 @@
                         <h2 class="heading">Awards & Accomplishments</h2>
                         <p>
                             <ul>
-                                <li> BAPS-BUBT National Programming Camp 2012-13 (Advanced Division) <br> Bangladesh Association of Problem Setters - Bangladesh University of Business & Technology</li>
+                                <li> BAPS-BUBT National Programming Camp 2012-13 (Advanced Division) <br><small> Bangladesh Association of Problem Setters - Bangladesh University of Business & Technology</small></li>
                                 <li>Winner of IT Quiz Contest 2014 <br> Daffodil-Japan IT Limited</li>
                                 <li>Runner Up, Intra-University Programming Contest 2014 <br> Department of Computer Science & Engineering, Jahangirnagar University</li>
                                 <li>3rd Place in Robi-UCSI Inter-University Programming Fiesta 2012 <br> Robi Axiata and UCSI University</li>
