--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="secondary col-md-4 col-sm-12 col-xs-12">
                  <aside class="info aside section">
                     <div class="section-inner">
-                        <h2 class="heading sr-only">Basic Information</h2>
+                        <h2 class="heading">Basic Information</h2>
                         <div class="content">
                         <!--<a class="btn btn-cta-primary pull-left" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a> -->
                             <ul class="list-unstyled">
