--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 </p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer Internship - <span class="place"><a href="http://www.edu-smart.info/">Edu Smart</a></span> <span class="year">(June 2015 - August 2015)</span></h3>
+                                <h3 class="title"> Web Developer (Backend) - <span class="place"><a href="http://www.edu-smart.info/">Edu Smart</a></span> <span class="year">(December 2014 - December 2015)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Web Development using PHP-MySql</li>
