--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                           <div class="item">
-                                <h3 class="title">Android Developer - <span class="place"><a href="http://multiplexerlab.com//">Multiplexer Lab</a></span> <span class="year">(August, 2016 - Present)</span></h3>
+                                <h3 class="title">Programmer - <span class="place"><a href="http://www.epylliongroup.com/">Epyllion Technologies Ltd.</a></span> <span class="year">(February, 2017 - Present)</span></h3>
+                              
+                          </div><!--//item-->
+                          
+                          <div class="item">
+                                <h3 class="title">Android Developer - <span class="place"><a href="http://multiplexerlab.com//">Multiplexer Lab</a></span> <span class="year">(August, 2016 - January, 2017)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Material Design and build advanced applications for the Android platform</li>
