--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                                 <h3 class="title">Programmer - <span class="place"><a href="http://www.epylliongroup.com/">Epyllion Technologies Ltd.</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
                               <ul>
+                               <li>Description will be added later</li>
                               </ul>
                            </p>
                           </div><!--//item-->
