--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                                 <h3 class="title">Programmer - <span class="place"><a href="http://www.epylliongroup.com/">Epyllion Technologies Ltd.</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
                               <ul>
-                               <li>Description will be added later</li>
+                               <li>Responsibilities will be added later</li>
                               </ul>
                            </p>
                           </div><!--//item-->
                           
                           <div class="item">
-                                <h3 class="title">Android Developer - <span class="place"><a href="http://multiplexerlab.com//">Multiplexer Lab</a></span> <span class="year">(August, 2016 - January, 2017)</span></h3>
+                                <h3 class="title">Android Developer (part-time) - <span class="place"><a href="http://multiplexerlab.com//">Multiplexer Lab</a></span> <span class="year">(April, 2016 - January, 2017)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Material Design and build advanced applications for the Android platform</li>
@@ -125,7 +125,7 @@
                                 </p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Lecturer & Programming Trainer - <span class="place"><a href="http://www.themillenniumuniversity.edu.bd/">The Millennium University</a></span> <span class="year">(January, 2016 - July, 2016)</span></h3>
+                                <h3 class="title">Lecturer & Programming Trainer - <span class="place"><a href="http://www.themillenniumuniversity.edu.bd/">The Millennium University</a></span> <span class="year">(January, 2016 - December, 2016)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Prepare lesson plans, lecture materials and actively involved in developing curriculum.</li>
