responsibilities of magento added

--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
                                 <h3 class="title">Programmer - <span class="place"><a href="http://www.epylliongroup.com/">Epyllion Technologies Ltd.</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
                               <ul>
-                               <li>Responsibilities will be added later</li>
+                               <li>Working with Magento, an open-source e-commerce platform written in PHP with elements of Zend Framework.</li>
+                               <li>Writting strong scalable codes by following Object Oriented MVC architecture.</li>
+                               <li>Developing Magento Modules, extension and themes.</li>
+                               <li>Integrating external systems liks CRM, ERP, Payment Gateway, Shipping etc.</li>
+                               <li>Designing Web Services (REST/SOAP) for cross-application communication with Backend Systems and integrating third-party API’s</li>
                               </ul>
                            </p>
                           </div><!--//item-->
