--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                               <ul>
                                <li>Working with Magento, an open-source e-commerce platform written in PHP with elements of Zend Framework.</li>
                                <li>Writing strong scalable codes by following Object Oriented MVC architecture.</li>
-                               <li>Developing Magento Modules, extension and themes.</li>
+                               <li>Developing Magento Modules, extensions and themes.</li>
                                <li>Integrating external systems liks CRM, ERP, Payment Gateway, Shipping etc.</li>
                                <li>Designing Web Services (REST/SOAP) for cross-application communication with Backend Systems and integrating third-party API’s</li>
                               </ul>
