--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                <li>Writing strong scalable codes by following Object Oriented MVC architecture.</li>
                                <li>Developing Magento Modules, extensions and themes.</li>
                                <li>Integrating external systems liks CRM, ERP, Payment Gateway, Shipping etc.</li>
-                               <li>Designing Web Services (REST/SOAP) for cross-application communication with Backend Systems and integrating third-party API’s</li>
+                               <li>Designing Web Services (REST) for cross-application communication with Backend Systems and integrating third-party API’s</li>
                               </ul>
                            </p>
                           </div><!--//item-->
@@ -274,7 +274,7 @@
 
                 <aside class="education aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Editional Courses</h2>
+                        <h2 class="heading">Additional Courses</h2>
                         <div class="content">
 
                             <div class="item">                      
