--- a/index.html
+++ b/index.html
@@ -58,29 +58,36 @@
                     <div class="section-inner">
                         <h2 class="heading">Projects</h2>
                         <div class="content">
+                             <div class="item">
+                                <h3 class="title">Hurrayy.com</h3>
+                                <p class="summary">Largest Online Shopping Store for kids & baby products in Bangladesh  <br>
+                                Technology used: Magento2, MVVM<br>
+                                Language Used: PHP, JS, MySQL, XML, PHTML, LESS</p>
+                                <p><a class="more-link" href="http://hurrayy.com/" target="_blank"> View Site </a></p>
+                            </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="#"> Cric Quiz BD </a></h3>
+                                <h3 class="title">Cric Quiz BD </h3>
                                 <p class="summary">CricQuiz BD is a gaming app by which you can Earn Money. By playing CricQuizBD you can convert your scores to credit recharge on your mobile. It's a fun game to practice the cricket knowledge on your android phones.  <br>
                                 Technology used: Android Studio  <br>
                                 Language Used: Java, MySQL</p>
                                 <p><a class="more-link" href="https://play.google.com/store/apps/details?id=multiplexer.cric.quiz&hl=en" target="_blank"> Download From Google Play </a></p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="#"> CS Fresher Interview Q&A </a></h3>
+                                <h3 class="title"> CS Fresher Interview Q&A </h3>
                                 <p class="summary">This Android app is specially designed for fresh computer science graduates with no prior experience. It contains most commonly asked interview questions as well as answers.  <br>
                                 Technology used: Android Studio, Fragment, RESTful api, JSON, AsyncTask, Recycler View,  <br>
                                 Language Used: Java, MySQL, PHP</p>
                                 <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="#"> Multi-Agent Pacman </a><span class="label label-theme">Open Source</span></h3>
+                                <h3 class="title"> Multi-Agent Pacman <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, I have designed agents for the classic version of Pacman, including ghosts. <br>
                                 Algorithms used: Minimax Search, Alpha-Beta Pruning, Expectimax Search <br>
                                 Language Used: Python</p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/Multi-Agent_Pacman" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="#">Search in Pacman </a><span class="label label-theme">Open Source</span></h3>
+                                <h3 class="title">Search in Pacman <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, Pacman agent finds paths through his maze world, both to reach a particular location and to collect food efficiently. I have build general search algorithms and apply them to Pacman scenarios. <br>
                                  Algorithms Used: Depth First Search, Breadth First Search, Uniform Cost Search, A* search <br>
                                  Conditions Handled: Finding All Corners, Corners Heuristic, Eating All Dots, Suboptimal Search <br>
@@ -88,7 +95,7 @@
                                 <p><a class="more-link" href="https://github.com/raihanruhin/SEARCH-IN-PACMAN" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="#">Course Management System </a><span class="label label-theme">Open Source</span></h3>
+                                <h3 class="title">Course Management System <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">A web based project where students can view their course details, short note and book references of each course. Teacher can access the admin panel to modify any changes. <br> Language Used: PHP, JavaScript, JQuery, AJAX and MySQL. </p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/Course-Management-System" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
