--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <div class="content">
                             <div class="item">                      
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc in Computer Science & Engineering</h3>
-                                <h4 class="university"> <a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2016-Current)</span></h4>
+                                <h4 class="university"> <a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2016-2017)</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science & Engineering</h3>
