--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Love to code. Continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of Algorithms and Data Structures to work on large data. Also have hands-on experiences in Software Development, Mobile &amp; Web application development using different programming languages. Have deep understanding of System Architecture &amp; Network Communications.</p>
+                            <p>Love to code. Continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of Algorithms and Data Structures to work on large data. Also, have hands-on experiences in Software Development, Mobile &amp; Web application development using different programming languages. Conversant with System Architecture &amp; Network Communications.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
