--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                           <div class="item">
-                                <h3 class="title">Programmer - <span class="place"><a href="http://www.epylliongroup.com/">Epyllion Technologies Ltd.</a></span> <span class="year">(February, 2017 - Present)</span></h3>
+                                <h3 class="title">Programmer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
                               <ul>
                                <li>Working with Magento, an open-source e-commerce platform written in PHP with elements of Zend Framework.</li>
