--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html lang="en">
 <head>
-    <title>Portfolio of Raihan Ruhin</title>
+    <title>Resume of Raihan Ruhin</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Love to code. Continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of Algorithms and Data Structures to work on large data. Also, have hands-on experiences in Software Development, Mobile &amp; Web application development using different programming languages. Conversant with System Architecture &amp; Network Communications.</p>
+                            <p>Love to code. Love to play with data. Continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of Algorithms and Data Structures to work on large data. Also, have hands-on experiences in Software Development, Mobile &amp; Web application development using different programming languages. Conversant with System Architecture &amp; Network Communications.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
