--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="item">
-                                    <h3 class="level-title"> Java (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
+                                    <h3 class="level-title">JavaScript (certified), PHP (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>                                      
@@ -241,7 +241,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">JavaScript (certified), PHP (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Web Development, Mostly back-end">Workable</span></h3>
+                                    <h3 class="level-title">Java (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Web Development, Mostly back-end">Workable</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="75%">
                                         </div>                                      
@@ -249,7 +249,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">SQL (certified), MySql, XML, JSON<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="RDBMS, Data Interchange & NoSql">Workable</span></h3>
+                                    <h3 class="level-title">SQL (certified), MySql, SQLite<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="RDBMS, Data Interchange & NoSql">Workable</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="70%">
                                         </div>                                      
