--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="item">
-                                    <h3 class="level-title">JavaScript (certified), PHP (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
+                                    <h3 class="level-title">PHP - JavaScript (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Used mostly for Android App Development">Specialist</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="85%">
                                         </div>                                      
