--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Raihan Ruhin" />
             <div class="profile-content pull-left">
                 <h1 class="name">Mohammad Raihan Ruhin</h1>
-                <h2 class="desc">Computer Science Graduate</h2>   
+                <h2 class="desc">Software Engineer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://www.linkedin.com/in/raihanruhin"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/raihanruhin"><i class="fa fa-facebook"></i></a></li>
