--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.jpg" alt="Raihan Ruhin" />
             <div class="profile-content pull-left">
-                <h1 class="name">Mohammad Raihan Ruhin</h1>
+                <h1 class="name">Raihan Ruhin</h1>
                 <h2 class="desc">Software Engineer</h2>   
                 <ul class="social list-inline">
                     <li><a href="https://www.linkedin.com/in/raihanruhin"><i class="fa fa-linkedin"></i></a></li>
