--- a/index.html
+++ b/index.html
@@ -268,12 +268,12 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc in Computer Science & Engineering</h3>
-                                <h4 class="university"> <a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2016-2017)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Masters in Computer Science & Engineering</h3>
+                                <h4 class="university"> <a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2015-2016)</span></h4>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc in Computer Science & Engineering</h3>
-                                <h4 class="university"><a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2011-2015)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelor in Computer Science & Engineering</h3>
+                                <h4 class="university"><a href="http://www.juniv.edu/"> Jahangirnagar University </a> <span class="year">(2011-2014)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
