project JU bus tracker added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                                 <p><a class="more-link" href="http://hurrayy.com/" target="_blank"> View Site </a></p>
                             </div><!--//item-->
                             <div class="item">
+                                <h3 class="title">JU Bus Tracker </h3>
+                                <p class="summary">JU Bus Tracker is an android app by which Jahangirnagar University students can get the live location of the buses through this application. It will help the students to get prepared for the campus bus accordingly and save few minutes. <br>
+                                Technology used: Android Studio, Google Geolocation Api  <br>
+                                Language Used: Java, PHP, MySQL</p>
+                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.raihanruhin.jubustracker&hl=en" target="_blank"> Download From Google Play </a></p>
+                            </div><!--//item-->
+                            <div class="item">
                                 <h3 class="title">Cric Quiz BD </h3>
                                 <p class="summary">CricQuiz BD is a gaming app by which you can Earn Money. By playing CricQuizBD you can convert your scores to credit recharge on your mobile. It's a fun game to practice the cricket knowledge on your android phones.  <br>
                                 Technology used: Android Studio  <br>
