--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">JU Bus Tracker </h3>
-                                <p class="summary">JU Bus Tracker is an android app by which Jahangirnagar University students can get the live location of the buses through this application. It will help the students to get prepared for the campus bus accordingly and save few minutes. <br>
+                                <p class="summary">JU Bus Tracker is an android app by which Jahangirnagar University students gets the live location of the buses. It helps the students to get prepared for the campus bus accordingly and save few minutes.<br>
                                 Technology used: Android Studio, Google Geolocation Api  <br>
                                 Language Used: Java, PHP, MySQL</p>
                                 <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.raihanruhin.jubustracker&hl=en" target="_blank"> Download From Google Play </a></p>
