--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>English:</strong></span>
-                                    <span class="level"><br>Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
+                                    <span class="level"><br>Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>Hindi:</strong></span>
