ugc - classtune project

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
                         <h2 class="heading">Projects</h2>
                         <div class="content">
                              <div class="item">
+                                <h3 class="title">ClassTune</h3>
+                                <p class="summary">Country’s first-ever complete School/Learning Management System.<br>
+                                Technology used: MVC, Rails, Turnkey Linux<br>
+                                Language Used: Ruby, AJAX, JS, MySQL</p>
+                                <p><a class="more-link" href="http://www.classtune.com" target="_blank"> View Site </a></p>
+                             </div><!--//item-->
+                             <div class="item">
+                                <h3 class="title">UGC - Admin Dashboard</h3>
+                                <p class="summary">Dashboard for University Grants Commission of Bangladesh by which all the information regarding students and faculties of UGC approved universities is tracked and presented in simpler form<br>
+                                Technology used: MVC, Laravel, Turnkey Linux<br>
+                                Language Used: PHP, AngularJS MySQL</p>
+                                <p><a class="more-link" href="http://dashboard.edoozz.com" target="_blank"> View Site </a></p>
+                             </div><!--//item-->
+                             <div class="item">
                                 <h3 class="title">Hurrayy.com</h3>
                                 <p class="summary">Largest Online Shopping Store for kids & baby products in Bangladesh  <br>
                                 Technology used: Magento2, MVVM<br>
