--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                              <div class="item">
                                 <h3 class="title">ClassTune</h3>
                                 <p class="summary">Country’s first-ever complete LMS (Learning Management System, Also known as School Management System). ClassTune is a platform that bridges among students, parents and teachers using Cell Phone, Tablets or PCs. <br>
-                                Technology used: MVC, Ruby on Rails, Turnkey Linux, Secure SSL<br>
+                                Technology used: MVC, Ruby on Rails, Turnkey Linux, Secure SSL, Git<br>
                                 Language Used: Ruby, AJAX, JS, MySQL</p>
                                 <p><a class="more-link" href="http://www.classtune.com" target="_blank"> View Site </a></p>
                              </div><!--//item-->
                              <div class="item">
                                 <h3 class="title">UGC - Admin Dashboard</h3>
                                 <p class="summary">Dashboard for University Grants Commission of Bangladesh by which all the information regarding students and faculties of UGC approved universities is tracked and presented in simpler form<br>
-                                Technology used: MVC, Laravel, Turnkey Linux<br>
+                                Technology used: MVC, Laravel, Turnkey Linux, Git<br>
                                 Language Used: PHP, AngularJS, MySQL</p>
                                 <p><a class="more-link" href="http://dashboard.edoozz.com" target="_blank"> View Site </a></p>
                              </div><!--//item-->
