--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Love to code. Love to play with data. Solved over 2000 problems and continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of algorithms and data structures to work on large data. Also, have hands-on experiences in software development, mobile &amp; web application development using different programming languages.</p>
+                            <p>Love to code. Love to play with data. Solved over 2000 problems and continuously solving algorithmic and mathematical problems to enhance programming skill and analytic ability. Have profound knowledge of algorithms and data structures to work on large data. Also, have hands-on experiences in software development, mobile &amp; web application development using different programming languages and frameworks.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
