--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                                 Language Used: Java, MySQL</p>
                                 <p><a class="more-link" href="https://play.google.com/store/apps/details?id=multiplexer.cric.quiz&hl=en" target="_blank"> Download From Google Play </a></p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title"> CS Fresher Interview Q&A </h3>
                                 <p class="summary">This Android app is specially designed for fresh computer science graduates with no prior experience. It contains most commonly asked interview questions as well as answers.  <br>
@@ -100,6 +101,7 @@
                                 Language Used: Java, MySQL, PHP</p>
                                 <p><a class="more-link" href="https://www.amazon.com/CS-Fresher-Interview-Q-A/dp/B01IX3P2HQ" target="_blank"> Download From Amazon Appstore </a></p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title"> Multi-Agent Pacman <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, I have designed agents for the classic version of Pacman, including ghosts. <br>
@@ -107,6 +109,7 @@
                                 Language Used: Python</p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/Multi-Agent_Pacman" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title">Search in Pacman <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">This is an Artificial Inteligence Project. In this project, Pacman agent finds paths through his maze world, both to reach a particular location and to collect food efficiently. I have build general search algorithms and apply them to Pacman scenarios. <br>
@@ -115,6 +118,7 @@
                                  Language Used: Python</p>
                                 <p><a class="more-link" href="https://github.com/raihanruhin/SEARCH-IN-PACMAN" target="_blank"><i class="fa fa-external-link"></i> View on GitHub</a></p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title">Course Management System <span class="label label-theme">Open Source</span></h3>
                                 <p class="summary">A web based project where students can view their course details, short note and book references of each course. Teacher can access the admin panel to modify any changes. <br> Language Used: PHP, JavaScript, JQuery, AJAX and MySQL. </p>
@@ -134,9 +138,18 @@
                           <div class="item">
                                 <h3 class="title">Programmer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
+                            Phase 2
                               <ul>
-                               <li>Working with Magento, an open-source e-commerce platform written in PHP with elements of Zend Framework.</li>
-                               <li>Writing strong scalable codes by following Object Oriented MVC architecture.</li>
+                               <li>Developing web applications by following MVC design pattern for rapid, reusable and parallel development.</li>
+                               <li>Angularjs for interactive font end application with Javascript to ensure high performance on both mobile and desktop. </li>
+                               <li>Cooperating with the back-end development in the process of building the RESTful API using Laravel.</li>
+                               <li>Extending and improving features of existing ClassTune product based on client requirement using Ruby on Rails framework.</li>
+                              </ul>
+                           </p>
+                           <p>
+                            Phase 1
+                              <ul>
+                               <li>Working with Magento, an open-source e-commerce platform written in PHP with elements of Zend Framework.</li>        
                                <li>Developing Magento Modules, extensions and themes.</li>
                                <li>Integrating external systems liks CRM, ERP, Payment Gateway, Shipping etc.</li>
                                <li>Designing Web Services (REST) for cross-application communication with Backend Systems and integrating third-party API’s</li>
