--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                           <div class="item">
-                                <h3 class="title">Programmer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - Present)</span></h3>
+                                <h3 class="title">Software Engineer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - Present)</span></h3>
                            <p>
                             Phase 2
                               <ul>
@@ -156,7 +156,7 @@
                               </ul>
                            </p>
                           </div><!--//item-->
-                          
+                          <!--
                           <div class="item">
                                 <h3 class="title">Android Developer (part-time) - <span class="place"><a href="http://multiplexerlab.com//">Multiplexer Lab</a></span> <span class="year">(April, 2016 - January, 2017)</span></h3>
                                 <p>
@@ -169,6 +169,7 @@
 
                                 </p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title">Lecturer & Programming Trainer - <span class="place"><a href="http://www.themillenniumuniversity.edu.bd/">The Millennium University</a></span> <span class="year">(January, 2016 - December, 2016)</span></h3>
                                 <p>
@@ -181,6 +182,7 @@
 
                                 </p>
                             </div><!--//item-->
+                            <!--
                             <div class="item">
                                 <h3 class="title"> Web Developer (Backend) - <span class="place"><a href="http://www.edu-smart.info/">Edu Smart</a></span> <span class="year">(December 2014 - December 2015)</span></h3>
                                 <p>
@@ -275,7 +277,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Java (certified)<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Web Development, Mostly back-end">Workable</span></h3>
+                                    <h3 class="level-title">Java <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Web Development, Mostly back-end">Workable</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="75%">
                                         </div>                                      
