--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                           <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - Present)</span></h3>
+                                <h3 class="title">Software Engineer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - October, 2017)</span></h3>
                            <p>
                             Phase 2
                               <ul>
