--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                                 <li>UVa: Global Rank: 976 (Total users: 1M+).</li>
                                 <li>ACM-ICPC Live Archive: Global Rank: 387 (Total users: 1M+).</li>
                                 <li>SoloLearn.com: Global Rank: 4th (Total users 5M+).</li>
+                                <li>Problem Setter and Judge, JU-IDPC 2017</li>
                             </ul>
                         </p> 
                     </div><!--//section-inner-->                 
