paper and language add

--- a/index.html
+++ b/index.html
@@ -380,6 +380,10 @@
                                     <span class="level"><br>Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
                                 </li><!--//item-->
                                 <li class="item">
+                                    <span class="title"><strong>Japanese:</strong></span>
+                                    <span class="level"><br> Basic <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+                                </li><!--//item-->
+                                <li class="item">
                                     <span class="title"><strong>Hindi:</strong></span>
                                     <span class="level"><br>Limited Working Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
                                 </li><!--//item-->
@@ -392,8 +396,13 @@
                     <div class="section-inner">
                         <h2 class="heading">Publications</h2> 
                         <div class="content">
-                            Title: <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> Published Date: February 15, 2016 <br>
-                                Journal of Computer and Communications, (Vol 4, No 2.)
+                            Title: <a href="http://www.scirp.org/journal/PaperInformation.aspx?paperID=82211">An Analysis of Foraging and Echolocation Behavior of Swarm Intelligence Algorithms in Optimization: ACO, BCO and BA.</a> <br> Published Date: January, 2018 <br>
+                                Journal of Computer and Communications. (Vol 8, No 1.)
+                            
+                        </div><!--//content-->
+                        <div class="content">
+                            Title: <a href="http://www.scirp.org/journal/PaperInformation.aspx?PaperID=63417">Recovery of Image through Alamouti Channel with Incorporation of RSA Algorithm.</a> <br> Published Date: February, 2016 <br>
+                                Journal of Computer and Communications. (Vol 4, No 2.)
                             
                         </div><!--//content-->
                     </div><!--//section-inner-->
