--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         <h2 class="heading">Publications</h2> 
                         <div class="content">
                             Title: <a href="http://www.scirp.org/journal/PaperInformation.aspx?paperID=82211">An Analysis of Foraging and Echolocation Behavior of Swarm Intelligence Algorithms in Optimization: ACO, BCO and BA.</a> <br> Published Date: January, 2018 <br>
-                                Journal of Computer and Communications. (Vol 8, No 1.)
+                                International Journal of Intelligence Science. (Vol 8, No 1.)
                             
                         </div><!--//content-->
                         <hr>
