--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             </div><!--//item-->
                             
                             <div class="item">
-                                <h3 class="title">Lecturer & Programming Trainer - <span class="place"><a href="http://www.themillenniumuniversity.edu.bd/">The Millennium University</a></span> <span class="year">(January, 2016 - December, 2016)</span></h3>
+                                <h3 class="title">Lecturer - <span class="place"><a href="http://www.themillenniumuniversity.edu.bd/">The Millennium University</a></span> <span class="year">(January, 2016 - December, 2016)</span></h3>
                                 <p>
                                     <ul>
                                         <li>Prepare lesson plans, lecture materials and actively involved in developing curriculum.</li>
