--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <h2 class="heading">Training</h2>
                         <div class="content">
                           <div class="item">
-                                <h3 class="title">Trainee <span class="place"><a href="http://bjet.org/">Bangladesh-Japan ICT Engineers Training Program</a></span> <span class="year">(November 2017 - February, 2018)</span></h3>
+                                <h3 <a href="http://bjet.org/">Bangladesh-Japan ICT Engineers Training Program</a><span class="year">(November 2017 - February, 2018)</span></h3>
                            <p>                        
                                Supported by JICA and Bangladesh Computer Council.        
                            </p>
