--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
                     <div class="section-inner">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
+                         <div class="item">
+                                <h3 class="title">Software Engineer - <span class="place"><a href="https://www.skycom.jp/">SKYCOM Corporation</a></span> <span class="year">(July, 2018 - Present)</span></h3>
+                           <p>                        
+                              <ul>
+                               <li> Developing SkyPDF tools SDK using Windows API (a.k.a. Win32).</li>
+                               <li> Enhancing features of SkyPDF using existing toolsSDK.</li>                     
+                               <li> Developing SkyCom's internal shipping web application using C# MVC.</li>
+                               
+                              </ul>
+                           </p>
+                          </div><!--//item-->
                           <div class="item">
                                 <h3 class="title">Software Engineer - <span class="place"><a href="http://www.champs21.com//">Champs21.com</a></span> <span class="year">(February, 2017 - October, 2017)</span></h3>
                            <p>                        
@@ -203,6 +214,9 @@
                            <p>                        
                                Supported by JICA and Bangladesh Computer Council.        
                            </p>
+                          </div><!--//item-->
+                          <div class="item">
+                           <a href="http://www.miyazaki-u.ac.jp/english/">Japanese Language Course at University of Miyazaki </a> <span class="year">( April 2018 - June, 2018)</span>                          
                           </div><!--//item-->
                                                                                
                         </div><!--//content-->  
